attached_assets/Pasted-Logs-for-your-project-will-appear-below-Press-Ctrl-C-to_1772976983868.txt
Logs for your project will appear below. Press Ctrl+C to exit.
Android Bundling failed 8046ms index.js (683 modules)
 ERROR  SyntaxError: /home/runner/workspace/expo-app/App.js: Expected corresponding JSX closing tag for <ScrollView>. (4187:12)

  4185 |                 </TouchableOpacity>
  4186 |               )}
> 4187 |             </View>
       |             ^
  4188 |           </View>
  4189 |         </View>
  4190 |         
    at constructor (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:365:19)
    at FlowParserMixin.raise (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:6599:19)
    at FlowParserMixin.jsxParseElementAt (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:4727:16)
    at FlowParserMixin.jsxParseElementAt (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:4698:32)
    at FlowParserMixin.jsxParseElementAt (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:4698:32)
    at FlowParserMixin.jsxParseElementAt (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:4698:32)
    at FlowParserMixin.jsxParseElementAt (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:4698:32)
    at FlowParserMixin.jsxParseElement (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:4749:17)
    at FlowParserMixin.parseExprAtom (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:4759:19)
    at FlowParserMixin.parseExprSubscripts (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:11081:23)
    at FlowParserMixin.parseUpdate (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:11066:21)
    at FlowParserMixin.parseMaybeUnary (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:11046:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:10899:61)
    at FlowParserMixin.parseExprOps (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:10904:23)
    at FlowParserMixin.parseMaybeConditional (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:10881:23)
    at FlowParserMixin.parseMaybeAssign (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:10831:21)
    at /home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:3498:39
    at FlowParserMixin.tryParse (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:6907:20)
    at FlowParserMixin.parseMaybeAssign (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:3498:18)
    at /home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:10800:39
    at FlowParserMixin.allowInAnd (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:12426:12)
    at FlowParserMixin.parseMaybeAssignAllowIn (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:10800:17)
    at FlowParserMixin.parseMaybeAssignAllowInOrVoidPattern (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:12493:17)
    at FlowParserMixin.parseParenAndDistinguishExpression (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:11675:28)
    at FlowParserMixin.parseParenAndDistinguishExpression (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:3591:18)
    at FlowParserMixin.parseExprAtom (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:11331:23)
    at FlowParserMixin.parseExprAtom (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:4764:20)
    at FlowParserMixin.parseExprSubscripts (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:11081:23)
    at FlowParserMixin.parseUpdate (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:11066:21)
    at FlowParserMixin.parseMaybeUnary (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:11046:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:10899:61)
    at FlowParserMixin.parseExprOps (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:10904:23)
    at FlowParserMixin.parseMaybeConditional (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:10881:23)
    at FlowParserMixin.parseMaybeAssign (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:10831:21)
    at FlowParserMixin.parseMaybeAssign (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:3549:18)
    at FlowParserMixin.parseExpressionBase (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:10784:23)
    at /home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:10780:39
    at FlowParserMixin.allowInAnd (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:12421:16)
    at FlowParserMixin.parseExpression (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:10780:17)
    at FlowParserMixin.parseReturnStatement (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:13142:28)
    at FlowParserMixin.parseStatementContent (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:12798:21)
    at FlowParserMixin.parseStatementLike (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:12767:17)
    at FlowParserMixin.parseStatementLike (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:2918:24)
    at FlowParserMixin.parseStatementListItem (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:12747:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:13316:61)
    at FlowParserMixin.parseBlockBody (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:13309:10)
    at FlowParserMixin.parseBlock (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:13297:10)
    at FlowParserMixin.parseFunctionBody (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:12100:24)
    at FlowParserMixin.parseFunctionBody (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:2895:11)
    at FlowParserMixin.parseFunctionBodyAndFinish (/home/runner/workspace/expo-app/node_modules/@babel/parser/lib/index.js:12086:10)
